+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.
Please do not exceed 80 characters per line.
Latest changes go on top, different types of changes may be mixed.

Changes in ATK 6.3
------------------
* The 'cancel' button on the extended search screen now works. [Tjeerd]
+ Decomposed atkWriteLog into 2 functions atkWriteLog and atkWriteToFile,
  so the latter becomes an extra tool in atktools.inc. [Patrick]
+ Errormails are now also send before a redirect header if debug level < 2.
  [Tjeerd]
+ Added function showDirs(boolean b) to class.atkfileeditor.inc. Default
  configuration is true. [Patrick]
- Mark datatypes/ classes deprecated.
* Add dt suffix datatype classes: datatypes/atkstring -> datatypes/atkstringdt etc.
  [Marc]
* Removed function MakeFCKEditable from javascript/dhtml_tabs.js.php. It
  caused FCK keylistener to be registered twice on page load, and the purpose
  of the function seems to be obsolete due to the newer FCK version.
  Tested in FF3 and IE7. [Patrick]
* Make use of newer atkTriggerError in emailAttribute for triggering attribute
  errors so labels are filled correctly. [Tjeerd]
+ Added atkGetCharset() function to atkTools, it first checks the config
  default_charset and has a fallback to the charset in the language
  file. [Sandy]
* Changed all atktext('charset') calls into atkGetCharset() [Sandy]
* Fixed displaying of special chars in atkmanytoonerelation
  dropdowns [Sandy,Jeroen]
+ Added atkString class in the utils which is always loaded. It contains string
  functions that will use the mbstring extension if it's detected. If you have the
  extension and don't want to use it, you can use the config use_mbstring to turn
  it off. atkString contains at the moment functions for: strlen, substr, charAt
  strpos, strtolower, strtoupper. [Sandy]