@@ -8,6 +8,10 @@ Latest changes go on top, different types of changes may be mixed.
 
 Changes in ATK 6.3
 ------------------
+* Added classname to atkfckattribute and made a change to 
+  class.atkunloadhelper.js to make sure that changes in a fckfield
+  will be picked up and display a warning message when one leaves the page
+  [Ruud]
 * The 'cancel' button on the extended search screen now works. [Tjeerd]
 + Decomposed atkWriteLog into 2 functions atkWriteLog and atkWriteToFile,
   so the latter becomes an extra tool in atktools.inc. [Patrick]
